--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Anicet.jpg" alt="Anicet profile picture"></td>
+      <td><img src="Anicet.JPG" alt="Anicet profile picture"></td>
       <td>
         <h1>Anicet MAFFON </h1>
         <p><em>Freelance Online <strong> <a href="https://www.linkedin.com/in/anicet-maffon-054274134/?originalSubdomain=fr" /"target="_blank">Consultant and Teacher</a> </strong></em></p>
